# SubOctaveForBass

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.ttl  plugin.ttl
src/: main.cpp
